# CLLVM

./: .gitignore  CMakeLists.txt  Makefile  cllvm
.github/workflows/: cmake-single-platform.yml
include/: args.h  compile.h  lexer.h  preprocessor.h  tokens.h
include/preprocessor/: definitions.h  include.h  preprocessor.h  tokens.h
src/: args.cpp  compile.cpp  lexer.cpp  main.cpp  trigraphs.cpp
src/preprocessor/: definitions.cpp  include.cpp  includes.cpp  preprocessor.cpp
src/test/: cli.cpp  preprocessor.test.cpp
src/test/preprocessor/: preprocessor.cpp  preprocessor.test.cpp
test/: cli.cpp  hello_world.c
test/preprocessor/: include.cpp  lexer.cpp  lexer_tokenization.cpp  preprocessor.cpp  tokenization.cpp
test/preprocessor/test_files/include/: test.h
